# gmail-ai-priority-assistant

./: .env.example  .gitignore  README.md  manage.py  preferences.example.yaml  pyproject.toml  requirements.txt
gmail_push_importance_digest/: ai_reply.py  app.py  classifier.py  cli.py  config.py  db.py  email_utils.py  gmail_client.py  ntfy.py  preferences.py  processor.py  reply_auth.py  schemas.py  webhook.py
systemd/: gmail-push-web.service  gmail-watch-renew.service  gmail-watch-renew.timer
